examples/test/testpolicy9174.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9174
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key10: value46
      key40: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value29
          key20: value8
          key30: value23
      podSelector:
        matchLabels:
          key24: value40
          key45: value7
